--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "granary",
   "version": "1.0.0",
   "description": "asecresponse projects",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/pukekaka/granary#readme",
   "dependencies": {
+    "ejs": "^2.5.5",
     "express": "^4.14.0"
   }
 }
