--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,9 @@ local.properties
 .cache-main
 .scala_dependencies
 .worksheet
+
+# Eclipse Core      
+.project
+
+# JDT-specific (Eclipse Java Development Tools)     
+.classpath
